--- a/css.css
+++ b/css.css
@@ -59,7 +59,8 @@
 #jogador #jogador-escolha a, #computador #computador-escolha a {
     opacity: .2;
 }
-#jogador #jogador-escolha a:hover {
+#jogador #jogador-escolha a:hover,
+#jogador #jogador-escolha a.selecionado, #computador #computador-escolha a.selecionado {
     opacity: 1;
 }
 #jogador #jogador-escolha img, #computador #computador-escolha img {
